add nested app context